# arc-wizard-chess

./: ChAruco.py  README.md
Chess Algorithm/: chess_v2.py
Command Center/launch/: README.md  chess_controller.launch
Command Center/nodes/: chess_alorithm  get_command
Fall 2021/Networking/: esp8266.py  httpParser.py  wifitest.py
Fall 2021/OpenCV/: ChessRecognition.py  ChessboardRecognition.py  apriltagtest.py  multitracking.py  tracking.py
Fall 2021/Speech/: ChessGame.ipynb  ChessTest.py  ChessVoiceCredentials.json  VoiceTest.py
Fall 2021/Speech/GoogleCloudTextToSpeechChess/: pyvenv.cfg
Fall 2021/Speech/GoogleCloudTextToSpeechChess/Scripts/: activate  activate.bat
Fall 2022/Networking/: Log Retrieval.ps1  MotorCode.py  Multiple Connections Code.py  Readme.txt  RobotCode.py  SendFirmware.ps1  SendFirmwareAdvanced.ps1  Test.ps1  boot.py
Fall2021-ComputerVision/: ChessRecognition.py
Robot Movement/: README.md
Spring 2021/Chess Algorithm/: README.md  chess_1inp_noChecks.py  chess_2inp_illegal.py
Spring 2021/Command Center/: CMakeLists.txt  README.md  package.xml
Spring 2021/Command Center/launch/: chess_position_controller.launch
Spring 2021/Command Center/nodes/: README.md  board.py  robot_position_controller
Spring 2021/Networking/: Client.py  Server.py
Spring 2021/Robot Movement/: board.py
Spring 2021/Speech/: README.md
Spring 2023/: aruco-dictionaries.txt  aruco_generator.py  calibration.py  camera.py  pose_estimation.py  wc_constants.py
Spring 2023/Computer Vision/: camera_matrix.npy  distortion_coefficients.npy
